# atu-crt

./: .gitignore  CMakeLists.txt  package.xml
src/tether_units/: IPOPTTetherUnit.hpp  TetherUnit_Interface.cpp  TetherUnit_Interface.hpp  TetherUnit_Solver.cpp  TetherUnit_Solver.hpp  acados_sim.json  tether_unit.py  tether_unit_TESTBVP.py  tetherunit.py
src/tether_units/c_generated_code_tether_units/tetherunit_integrator/: Makefile  acados_sim_solver_tetherunit_integrator.c  acados_sim_solver_tetherunit_integrator.h  main_sim_tetherunit_integrator.c
src/tether_units/c_generated_code_tether_units/tetherunit_integrator/tetherunit_integrator_model/: tetherunit_integrator_expl_ode_fun.c  tetherunit_integrator_expl_vde_adj.c  tetherunit_integrator_expl_vde_forw.c  tetherunit_integrator_model.h
src/tether_units/c_generated_code_tether_units/tetherunit_stepIntegrator/: acados_sim_solver_tetherunit_stepIntegrator.c  acados_sim_solver_tetherunit_stepIntegrator.h  main_sim_tetherunit_stepIntegrator.c
src/tether_units/c_generated_code_tether_units/tetherunit_stepIntegrator/tetherunit_stepIntegrator_model/: tetherunit_stepIntegrator_expl_ode_fun.c  tetherunit_stepIntegrator_expl_vde_adj.c  tetherunit_stepIntegrator_expl_vde_forw.c
tests/: RelativePositionTest.cpp  Single_ATU.cpp  TetherUnitTest.cpp
utils/: IntegratorInterface.cpp  IntegratorInterface.hpp  MathUtils.cpp  MathUtils.hpp
